           that this printout includes any observer edits to the headers.
           Also fix so that this proc works if both a ".fit" and ".fit.gz"
           file exist on disk.
           Also list the QUALITY keyword.
APOREDUCE: Add the following to the output structure: QUALITY,NAME,OBSCOMM
           RADEG,DECDEG,AIRMASS.
APO_LOG2HTML: Add QUALITY column to output table.
GET_MJD_DIR: Comment-out test that MJD directories contain files, since
           that's so bloody slow.
GUIDERMOVIE,GUIDERMPEG: New procs for looking at the spectroscopic guider
           images for a night.
INSPECFILES,INSPECTGEN: New routines for generating prototype files
           for manual inspection.
LOGSHEET: Do not include both uncompressed and compressed files in a listing.
           Remove the INDIR option, and add MJD and CAMERA keywords.
PLATEHIST: Use call to MJD2DATELIST.
PLATEMERGE: Include logic for setting the SPECPRIMARY field in the outputs.
           Speed this up by pre-generating the exact output structure,
           and use structure assignments rather than copy_struct_inx.
           Exclude some tags from the output structure, spec. ROSAT*,FIRST*.
PLOTSPEC: Some major re-organizing of the main routine to allow PLATE,MJD
           to be passed as vectors.  Add optional ZHDR return value.
           Add /RESTFRAME option.
QUICKTRACE,QUICKWAVE: Do not write the tsetfile or wsetfile if the
           quality of the exposure in not 'excellent' (and remove any
           such file for that exposure if it already exists).
READSPEC: Fix the re-sorting of the ZLINE output structure, which is
           complicated by being a multi-dimensional structure.
SDSSPROC: If the OBSCOMM keyword contains the words "dithered" or "focus",
           then assume this is test data (set QUALITY='test').
SPPLAN2D: Exclude all files where the QUALITY header keyword is not 'excellent'
           (as per change requested by PR 3687).