@@ -15,6 +15,8 @@ APOHEADER: Use SDSSHEAD() instead of HEADFITS() to read the headers, such
            Also list the QUALITY keyword.
 APOREDUCE: Add the following to the output structure: QUALITY,NAME,OBSCOMM
            RADEG,DECDEG,AIRMASS.
+APOREDUCE,QUICKBIAS,QUICKEXTRACT,QUICKTRACE,QUICKWAVE,REMOVE2REDO: Make
+           use of /do_lock keyword when calling SDSSHEAD() or SDSSPROC.
 APO_LOG2HTML: Add QUALITY column to output table.
 GET_MJD_DIR: Comment-out test that MJD directories contain files, since
            that's so bloody slow.
@@ -39,6 +41,8 @@ READSPEC: Fix the re-sorting of the ZLINE output structure, which is
            complicated by being a multi-dimensional structure.
 SDSSPROC: If the OBSCOMM keyword contains the words "dithered" or "focus",
            then assume this is test data (set QUALITY='test').
+SDSSPROC,SPHDRFIX: Add /do_lock option to lock the sdHdrFix files when
+           running Son-of-Spectro, which can dynamically alter those files.
 SPPLAN2D: Exclude all files where the QUALITY header keyword is not 'excellent'
            (as per change requested by PR 3687).
 SPREDUCE1D: The output FRACNSIGLO was being computed completely wrong -- Fixed.
